--- a/my-app/src/toast/toast.css
+++ b/my-app/src/toast/toast.css
@@ -3,7 +3,7 @@ button {
   border: 2px solid #008cba;
   color: black;
   padding: 16px 32px;
-  text-align: center;
+  text-align: left;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
