--- a/my-app/src/userDetails/SingleUserDetailsList.css
+++ b/my-app/src/userDetails/SingleUserDetailsList.css
@@ -1,19 +1,50 @@
+.avatar-image {
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+}
+
+.delete-user {
+  border: 2px solid red;
+  color: black;
+}
+
+.delete-user:hover {
+  background-color: red;
+  color: white;
+}
+
+.userName,
+.userName:active {
+  color: black;
+}
+
 table {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
   background-color: white;
   border: 2px solid #008cba;
   border-collapse: collapse;
-  width: 100%;
 }
 
 th {
+  text-align: center;
   border: #008cba;
   color: black;
+  text-align: left;
+  height: 50%;
 }
 
 td {
   padding: 8px;
   text-align: left;
   border-bottom: 1px solid #ddd;
+}
+
+tr {
+  text-align: center;
 }
 
 tr:hover {
