Fixed an issue preventing access to the add/customise user form.

--- a/my-app/src/userDetails/SingleUserDetailsList.css
+++ b/my-app/src/userDetails/SingleUserDetailsList.css
@@ -34,6 +34,7 @@ th {
   text-align: center;
   border: #008cba;
   color: black;
+  background-color: #008cba;
   text-align: left;
   height: 50%;
 }
