--- a/my-app/src/userDetails/SingleUserDetailsList.css
+++ b/my-app/src/userDetails/SingleUserDetailsList.css
@@ -4,6 +4,12 @@
   background-color: transparent;
 }
 
+.avatar-preview {
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+}
+
 .delete-user {
   border: 2px solid red;
   color: black;
