--- a/my-app/src/userDetails/SingleUserDetailsList.css
+++ b/my-app/src/userDetails/SingleUserDetailsList.css
@@ -1,3 +1,11 @@
+label {
+  float: left;
+  width: 20em;
+  text-align: right;
+  clear: left;
+  margin-right: 15px;
+}
+
 .avatar-image {
   width: 50px;
   height: 50px;
