--- a/my-app/src/userDetails/userDetailsForm.css
+++ b/my-app/src/userDetails/userDetailsForm.css
@@ -1,10 +1,31 @@
 .avatar-preview {
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
   background-color: transparent;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
-.userDetailsEdit-table {
+.form-group {
+  display: inline-flex;
+}
+
+.form-group label {
+  text-align: left;
+  width: 120px;
+  padding-left: 5px;
+}
+
+.userDetailsEdit-container {
+  text-align: left;
+}
+
+.userDetailsEdit-finalDiv {
+  display: flex;
+  align-items: center;
+}
+
+.userDetailsEdit-form {
   width: 50%;
   margin-left: auto;
   margin-right: auto;
