Partially refactored the form code so it saves edited data properly, without error checking preventing it.

--- a/my-app/src/userDetails/userDetailsForm.css
+++ b/my-app/src/userDetails/userDetailsForm.css
@@ -16,11 +16,11 @@
   padding-left: 5px;
 }
 
-.userDetailsEdit-container {
+.userDetailsEdit-div {
   text-align: left;
 }
 
-.userDetailsEdit-finalDiv {
+.userDetailsEdit-avatarPreviewDiv {
   display: flex;
   align-items: center;
 }
