--- a/my-app/src/userDetails/userDetailsForm.css
+++ b/my-app/src/userDetails/userDetailsForm.css
@@ -6,6 +6,31 @@
   padding-right: 5px;
 }
 
+.file-upload-wrapper {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+}
+
+.file-upload-btn {
+  border: 2px solid gray;
+  color: gray;
+  background-color: white;
+  padding: 8px 20px;
+  border-radius: 8px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.file-upload-wrapper input[type="file"] {
+  font-size: 100px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+}
+
 .form-group {
   display: inline-flex;
 }
