--- a/my-app/src/userDetails/userDetailsForm.css
+++ b/my-app/src/userDetails/userDetailsForm.css
@@ -6,31 +6,6 @@
   padding-right: 5px;
 }
 
-.file-upload-wrapper {
-  position: relative;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-}
-
-.file-upload-btn {
-  border: 2px solid gray;
-  color: gray;
-  background-color: white;
-  padding: 8px 20px;
-  border-radius: 8px;
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.file-upload-wrapper input[type="file"] {
-  font-size: 100px;
-  position: absolute;
-  left: 0;
-  top: 0;
-  opacity: 0;
-}
-
 .form-group {
   display: inline-flex;
 }
@@ -39,6 +14,33 @@
   text-align: left;
   width: 120px;
   padding-left: 5px;
+}
+
+.inputFile {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+
+.userDetailsEdit-avatarFileLabel {
+  color: white;
+  padding: 8px;
+}
+
+.inputFile + .userDetailsEdit-avatarFileLabel {
+  font-size: 1.25em;
+  font-weight: 700;
+  background-color: #2196f3;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.inputFile:focus + .userDetailsEdit-avatarFileLabel,
+.inputFile + .userDetailsEdit-avatarFileLabelbel:hover {
+  background-color: #2196f3;
 }
 
 .userDetailsEdit-div {
